# DeviceAccess_DoocsDemoServer

./: CMakeLists.txt  README.md  meson.build
config/: oven.dmap  oven.map  oven_server.conf
include/: EqFctOven.h
src/: EqFctOven.cpp  OvenServer.cpp  main.cpp
